--- a/app.desktop
+++ b/app.desktop
@@ -6,7 +6,7 @@ Comment=Code Editing. Redefined.
 Exec=code-insiders --unity-launch %F
 Icon=code-insiders
 Categories=TextEditor;Development;IDE;
-StartupWMClass=Code
+StartupWMClass=Code - Insiders
 StartupNotify=true
 Keywords=vscode;Visual Studio Code;Code;vscode-insiders;Visual Studio Code - Insiders;Code-Insiders
 MimeType=text/plain;inode/directory;application/x-code-workspace;
