Testing build of 2 desktop files and fixing input files

--- a/app.desktop
+++ b/app.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=Visual Studio Code - Insiders
 Comment=Code Editing. Redefined.
-Exec=code-insiders --unity-launch %F
+Exec=code-insiders %F
 Icon=code-insiders
 Categories=TextEditor;Development;IDE;
 StartupWMClass=Code - Insiders
