--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build
         id: build
-        uses: valicm/appimage-bash@main
+        uses: tyvsmith/appimage-bash@main
         with:
           version_url: 'https://code.visualstudio.com/sha/download?build=insider\&os=linux-x64'
           version_file: 'resources/app/package.json'
