Testing build of 2 desktop files and fixing input files

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         run: sudo apt-get install -y libfuse2 imagemagick   
       - name: Build
         id: build
-        uses: valicm/appimage-bash@main
+        uses: tyvsmith/appimage-bash@main
         with:
           version_url: 'https://code.visualstudio.com/sha/download?build=insider\&os=linux-x64'
           version_file: 'resources/app/package.json'
